syntax = "proto3";
option csharp_namespace = "Time.Net";
package time;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message SubscribeRequest {
  enum Unit {
      MilliSeconds = 0;
      Seconds = 1;
  }
  sint32 interval = 1;
  Unit unit = 2;
  sint32 count = 3;
}

message SyncResponse {
    string message = 1;
}

service TimeService {
  rpc Subscribe(SubscribeRequest) returns (stream google.protobuf.Timestamp);
  rpc Sync(stream google.protobuf.Timestamp) returns (SyncResponse);
  rpc Ping(stream google.protobuf.Timestamp) returns (stream google.protobuf.Int32Value);
}
